--- a/options/options.html
+++ b/options/options.html
@@ -36,7 +36,7 @@
   <label>
     API Key
     <input id="apiKey" type="password" placeholder="sk-..." />
-    <small>Stored locally on your machine. The popup never sees it; only the background worker uses it.</small>
+    <small>Stored locally on your machine. Safety. The popup never sees it; only the background worker uses it.</small>
   </label>
 
   <button id="saveBtn">Save</button>
