--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <h2>Debug Assistant</h2>
-  <button id="analyzeBtn">Debug</button>
+  <button id="analyzeBtn"type="button"
+  class="rounded-sm bg-indigo-600 px-2 py-1 text-xs font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 dark:bg-indigo-500 dark:shadow-none dark:hover:bg-indigo-400 dark:focus-visible:outline-indigo-500">
+ Debug</button>
   <div id="loading" style="display:none">Loading...</div>
   <pre id="answer"></pre>
   <button id="copyBtn" style="display:none">Copy</button>
